# django-bom

./: .dockerignore  .env.db.example  .env.dev  .env.example  .env.prod  .env.prod.db  .env.test  .gitignore  Caddyfile  Dockerfile  Dockerfile.testdriven.io.dev  Dockerfile.testdriven.io.prod  Pipfile  README.md  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.testdriven.io.dev  docker-compose.yml.testdriven.io.prod  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.py  setup.py  update-local.sh  wait-for-db.sh
.devcontainer/: devcontainer.json
.github/workflows/: django.yml  docker.yml  publish-docker.yml  tests.yml
api/: api_views.py  serializers.py  urls_api.py
bom/: __init__.py  admin.py  apps.py  constants.py  context_processors.py  csv_headers.py  decorators.py  form_fields.py  forms.py  helpers.py  local_settings.py.example  models.py  part_bom.py  part_bom_weighted copy.py  part_bom_weighted.py  routers.py  serializers.py  settings.py  settings_production.py  tests.py  urls.py  urls_api.py  utils.py  validators.py  viewsets.py  wsgi.py
bom/migrations/: 0001_initial.py  0002_auto_20180908_2151.py  0003_sellerpart_data_source.py  0004_auto_20180911_0011.py  0005_auto_20181007_1934.py  0006_auto_20181007_1949.py  0007_auto_20181009_0256.py  0008_auto_20181030_0427.py  0009_subpart_reference.py  0010_auto_20181202_0733.py  0011_auto_20181202_2113.py  0012_partchangehistory.py  0013_auto_20190222_1631.py  0014_auto_20190223_2353.py  0015_auto_20190303_1915.py  0016_auto_20190405_2308.py  0017_auto_20190616_1912.py  0018_auto_20190616_2143.py  0019_auto_20190624_1246.py  0020_auto_20190627_0207.py  0021_auto_20190627_0428.py  0022_auto_20190811_2140.py  0023_auto_20191205_2351.py  0024_auto_20191214_1342.py  0025_auto_20191221_1907.py  0026_auto_20191222_2258.py  0027_auto_20191222_2347.py  0028_partrevision_displayable_synopsis.py  0029_auto_20191231_1630.py  0030_auto_20200101_2253.py  0031_auto_20200104_1352.py  0032_auto_20200126_1806.py  0033_auto_20200203_0618.py  0034_auto_20200222_0359.py  0035_auto_20200303_0111.py  0036_auto_20200303_0538.py  0037_auto_20200405_1642.py  0038_auto_20200422_0504.py  0039_auto_20200929_2315.py  0040_alter_organization_currency.py  (+12 more)
bom/test_files/: test_new_parts_sellers_intelligent.csv  test_new_parts_sellers_intelligent_custom.csv
bom/tests/: test_api_auth.py  test_api_part_detail_bom.py  test_api_parts.py  test_bom.py  test_bom_auth.py  test_cache.py  test_forms.py  test_part_bom_weighted.py
bom/third_party_apis/: base_api.py  google_drive.py  mouser.py  test_apis.py
bom/views/: api_views.py  json_views.py  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf  nginx.conf.template
(+92 files in other folders)
