[project]
name = "barg-bom"
version = "0.1.0"
description = "A django app to manage a bill of materials."
authors = [
    { name = "Diaco Soltanpour", email = "dyaco8464@yahoo.com" }
]
dependencies = [
    "django>=5.0.3",
    "django-money>=3.4.1",
    "django-materializecss-form>=1.1.17",
    "social-auth-app-django>=5.4.0",
    "pytest>=8.1.1",
    "psycopg2-binary>=2.9.9",
    "google-api-python-client>=2.122.0",
    "debugpy>=1.8.1",
    "django-cors-headers>=4.3.1",
    "gunicorn>=21.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-django>=4.8.0",
    "ruff>=0.3.3",
    "parameterized>=0.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["django-bom"]

[tool.ruff]
line-length = 120
